# FlowEx

./: .env.example  .env.production  .gitignore  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  FRONTEND_SETUP_COMPLETE.md  LICENSE  PRODUCTION_DEPLOYMENT_REPORT.md  PRODUCTION_READY_REPORT.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_CN.md  TEST_COMPLETION_REPORT.md  TRADING_UI_SHOWCASE.md  comprehensive_system_test.py  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  enterprise_system_test_report.json  flowex_enterprise_ui_server.py  flowex_server.py  package.json  system_test_report.json  test-coverage-report.md  test_system.py
.github/workflows/: production-deploy.yml
backend/migrations/: 001_initial_schema.sql
backend/services/api-gateway/: Cargo.toml
backend/services/api-gateway/src/: main.rs
backend/services/auth-service/: Cargo.toml
backend/services/auth-service/src/: main.rs
backend/services/market-data-service/: Cargo.toml
backend/services/market-data-service/src/: main.rs
backend/services/trading-service/: Cargo.toml
backend/services/trading-service/src/: main.rs
backend/services/wallet-service/: Cargo.toml
backend/services/wallet-service/src/: main.rs
backend/shared/auth/: Cargo.toml
backend/shared/auth/src/: lib.rs
backend/shared/cache/: Cargo.toml
backend/shared/cache/src/: lib.rs
backend/shared/config/: Cargo.toml
backend/shared/config/src/: lib.rs
backend/shared/database/: Cargo.toml
backend/shared/database/src/: lib.rs
backend/shared/error-handling/: Cargo.toml
backend/shared/error-handling/src/: lib.rs
backend/shared/matching-engine/: Cargo.toml
backend/shared/matching-engine/src/: lib.rs
backend/shared/metrics/: Cargo.toml
backend/shared/metrics/src/: lib.rs
backend/shared/middleware/: Cargo.toml
backend/shared/middleware/src/: auth.rs  lib.rs
backend/shared/types/: Cargo.toml
backend/shared/types/src/: lib.rs
backend/shared/websocket/: Cargo.toml
backend/shared/websocket/src/: lib.rs
docs/api/: openapi.yaml
frontend/: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-entrypoint.sh  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: ErrorBoundary.tsx  LoadingSpinner.tsx  ThemeToggle.tsx
frontend/src/components/Layout/: AuthLayout.tsx  Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/components/Trading/: MarketStats.tsx  OrderBook.tsx  OrderForm.tsx  OrderHistory.tsx  PositionPanel.tsx  RecentTrades.tsx  TradingChart.tsx  TradingPairSelector.tsx  TradingViewTabs.tsx
frontend/src/components/__tests__/: LoadingSpinner.test.tsx
frontend/src/hooks/: useAuth.ts  useMarketData.ts  useTheme.ts  useTradingPairs.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  Home.tsx  Markets.tsx  NotFound.tsx  Orders.tsx  Portfolio.tsx  Profile.tsx  Settings.tsx  Trading.tsx  Wallet.tsx
frontend/src/pages/Auth/: ForgotPassword.tsx  Login.tsx  Register.tsx
frontend/src/services/: api.ts  authApi.ts  tradingApi.ts
frontend/src/store/: index.ts
frontend/src/store/middleware/: errorMiddleware.ts
frontend/src/store/slices/: authSlice.ts  marketDataSlice.ts  notificationSlice.ts  tradingSlice.ts  uiSlice.ts  walletSlice.ts
frontend/src/styles/: global.css
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: cn.ts  errorReporting.ts  performance.ts  serviceWorker.ts
k8s/production/: api-gateway.yaml  database.yaml  namespace.yaml
logging/fluentd/: fluent.conf
migrations/: 001_initial_schema.sql
monitoring/: alert_rules.yml  prometheus.yml
monitoring/grafana/dashboards/: flowex-overview.json
performance/: load-test.js
scripts/: backup-system.sh  build-enterprise.sh  build-frontend.sh  deploy-production.sh  quick-check.sh  run-comprehensive-tests.js  start-enterprise-environment.js  start-frontend.sh  system-check.sh  test-coverage-analysis.sh  test-enterprise.sh
security/: security-policies.yml
tests/: test_runner.rs
tests/integration/: auth_service_tests.rs  mod.rs  trading_service_tests.rs
