[package]
name = "flowex-api-gateway"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "FlowEx API Gateway - Enterprise-grade API gateway with load balancing and rate limiting"
license = "MIT"

[dependencies]
# Core dependencies
flowex-types = { path = "../../shared/types" }
flowex-config = { path = "../../shared/config" }
flowex-middleware = { path = "../../shared/middleware" }
flowex-metrics = { path = "../../shared/metrics" }
flowex-cache = { path = "../../shared/cache" }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Rate limiting
governor = "0.6"

# Load balancing
rand = "0.8"

# Configuration
config = "0.14"

[dev-dependencies]
tokio-test = "0.4"
