[package]
name = "flowex-auth"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "FlowEx Authentication Library - Enterprise-grade JWT and password management"
license = "MIT"

[dependencies]
# Core dependencies
flowex-types = { path = "../types" }
flowex-cache = { path = "../cache" }

# Authentication and security
bcrypt = "0.15"
jsonwebtoken = "9.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
