[package]
name = "flowex-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
flowex-types = { path = "../types" }
redis.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
