[package]
name = "flowex-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
config.workspace = true
serde.workspace = true
dotenvy.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
