[package]
name = "flowex-matching-engine"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "FlowEx Matching Engine - High-performance order matching for trading"
license = "MIT"

[dependencies]
# Core dependencies
flowex-types = { path = "../types" }

# Data structures
rust_decimal = { version = "1.33", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Collections
indexmap = "2.0"

[dev-dependencies]
tokio-test = "0.4"
