[package]
name = "flowex-middleware"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
flowex-types = { path = "../types" }
flowex-metrics = { path = "../metrics" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
serde.workspace = true
