[package]
name = "flowex-websocket"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "FlowEx WebSocket Service - Real-time data streaming"
license = "MIT"

[dependencies]
# Core dependencies
flowex-types = { path = "../types" }

# WebSocket
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Collections
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
